--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,13 @@
-<span>{{ title }} app is running!</span>
+<header>
+  <app-menu></app-menu>
+</header>
 
-<app-cadastro></app-cadastro>
+<!--main-->
+<main>
+  <router-outlet></router-outlet>
+</main>
+<!--fim main-->
 
-<app-consulta></app-consulta>
+<!-- footer -->
+<app-footer></app-footer>
+<!-- fim footer-->
