--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -13,8 +13,10 @@
         </a>
 
         <ul class="right hide-on-med-and-down">
-          <li><a href="#" class="flow-text blue-text">Novo Drink</a></li>
-          <li><a href="#" class="flow-text blue-text">Buscar Drink</a></li>
+
+         <li><a [routerLink] = "'cadastro'" class="flow-text blue-text">Novo Drink</a></li>
+         <li><a [routerLink] = "'consulta'" class="flow-text blue-text">Buscar Drink</a></li>
+
         </ul>
       </div>
     </div>
