--- a/src/app/land-page/land-page.component.html
+++ b/src/app/land-page/land-page.component.html
@@ -2,9 +2,9 @@
   class="intro amber z-depth-1 my-logo-text">
 </div>
 
-  <h1 class="blue-text center center">CATÁLOGO DE DRINKS</h1>
-  <h4 class="black-text text-darken-1 center center">O que vai ser para você hoje?</h4>
-  <h5 class="black-text text-darken-1 center center">Contamos com
+  <h1 class="blue-text center">CATÁLOGO DE DRINKS</h1>
+  <h4 class="black-text text-darken-1 center">O que vai ser para você hoje?</h4>
+  <h5 class="black-text text-darken-1 center">Contamos com
     <span id="tax-span" class="red-text">0</span>
     receitas cadastradas!
   </h5>
