--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -1,7 +1,9 @@
 
 <div class="container">
  <h5>CADASTRAR RECEITA</h5>
+
   <hr />
+
   <div class="row">
     <form class="col s12" #form="ngForm" (submit)="onSubmit()">
       <div class="input-field col s12">
@@ -17,14 +19,10 @@
           <div class="red-text" [hidden]="nome.valid || nome.untouched">
             Por favor, informe o nome do drink.
           </div>
-          <span
-          class="helper-text"
-          data-error="O campo é inválido"
-          data-success="Ok!"
-        ></span>
       </div>
 
-        <div class="row">
+
+       <div class="row">
          <div class="input-field col s12">
             <textarea id="textarea-ingred"
               name="textarea-ingred"
@@ -40,48 +38,36 @@
           </div>
         </div>
 
-          <div class="row">
-            <div class="input-field col s12">
-              <textarea id="textarea-preparo"
+      <div class="row">
+        <div class="input-field col s12">
+            <textarea id="textarea-preparo"
               name="textarea-preparo"
               class="materialize-textarea"
               [(ngModel)]="this.receita.modoprep"
               #modoprep="ngModel"
               required></textarea>
-              <label class = "active" for="textarea-preparo">Modo de Preparo*</label>
-              <div class="red-text" [hidden]="modoprep.valid || modoprep.untouched">
+            <label class = "active" for="textarea-preparo">Modo de Preparo*</label>
+            <div class="red-text" [hidden]="modoprep.valid || modoprep.untouched">
                 Por favor, informe o modo de preparo.
-              </div>
             </div>
-          </div>
+        </div>
+      </div>
 
-     <form action="#">
-    <p>
-      <label>
-        <input name="group1" type="radio" checked />
-        <span>Alcoólico</span>
-      </label>
-    </p>
-    <p>
-      <label>
-        <input name="group1" type="radio" />
-        <span>Não Alcoólico</span>
-      </label>
-    </p>
-      </form>
-
-      <form action="#">
-        <div class="file-field input-field">
-          <div class="btn">
-            <span>Inserir Foto</span>
-            <input type="file" multiple>
-          </div>
-
-          <div class="file-path-wrapper">
-            <input class="file-path validate" type="text" placeholder="Upload uma ou mais fotos">
+      <div class="row">
+        <div class="col s12">
+          <p>Gênero:</p>
+          <div class="radio-buttons">
+            <label>
+              <input class="with-gap" name="tipo" type="radio" [(ngModel)]="this.receita.tipo" value="alcoolica" required/>
+              <span>Alcoólica</span>
+            </label>
+            <label>
+              <input class="with-gap" name="tipo" type="radio" [(ngModel)]="receita.tipo" value="nalcoolica" required/>
+              <span>Não Alcoólica</span>
+            </label>
           </div>
         </div>
-      </form>
+      </div>
 
       <button
       class="btn right"
@@ -92,7 +78,5 @@
         <i class="material-icons right">send</i>
 
       </button>
-
     </form>
-  </div>
 </div>
