--- a/src/app/consulta/consulta.component.html
+++ b/src/app/consulta/consulta.component.html
@@ -1,1 +1,8 @@
-<p>Consulta Drinks</p>
+<div class="nav-wrapper">
+  <form>
+    <div class="input-field">
+      <input id="search" type="search" required class="validate" (input)="onSearch($any($event.target).value)">
+      <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+    </div>
+  </form>
+</div>
