--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,14 +1,21 @@
+<!-- rodapé -->
+
 <footer class="page-footer white accent-4">
   <div class="container">
     <div class="row">
-      <div class="col s12 center">
-        <img
-          src="assets/resources/images/logo-foot.png"
-          id="logo-footer"
-          class="img-responsive"
-          height="140em"
 
-        />
+      <div class="col s12 center">
+        <a class="brand-logo" href="#">
+          <img
+            src="assets/resources/images/logo-foot.png"
+            id="logo-footer"
+            class="img-responsive"
+            height="140em"
+          />
+        </a>
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger">
+        </a>
+
       </div>
     </div>
   </div>
