--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -2,10 +2,9 @@
 <div class="container">
  <h5>CADASTRAR RECEITA</h5>
 
-  <hr />
+   <form class="col s12" #form="ngForm" (submit)="onSubmit()">
 
-  <div class="row">
-    <form class="col s12" #form="ngForm" (submit)="onSubmit()">
+    <div class="row">
       <div class="input-field col s12">
         <input
           id="input-receita-nome"
@@ -13,14 +12,14 @@
           type="text"
           [(ngModel)]="this.receita.nome"
           #nome="ngModel"
-          required />
-
-            <label class = "active" for="input-receita.nome">Nome do Drink*</label>
+          required
+          />
+          <label class = "active" for="input-receita.nome">Nome do Drink*</label>
           <div class="red-text" [hidden]="nome.valid || nome.untouched">
             Por favor, informe o nome do drink.
           </div>
       </div>
-
+    </div>
 
        <div class="row">
          <div class="input-field col s12">
@@ -55,7 +54,7 @@
 
       <div class="row">
         <div class="col s12">
-          <p>Gênero:</p>
+          <p>Tipo:</p>
           <div class="radio-buttons">
             <label>
               <input class="with-gap" name="tipo" type="radio" [(ngModel)]="this.receita.tipo" value="alcoolica" required/>
@@ -76,7 +75,8 @@
 
         Salvar Receita
         <i class="material-icons right">send</i>
-
       </button>
+
     </form>
 </div>
+
