--- a/src/app/land-page/land-page.component.html
+++ b/src/app/land-page/land-page.component.html
@@ -3,9 +3,13 @@
 </div>
 
   <h1 class="blue-text center">CATÁLOGO DE DRINKS</h1>
-  <h4 class="black-text text-darken-1 center">O que vai ser para você hoje?</h4>
+  <h4 class="black-text text-darken-1 center">O que quer para hoje?</h4>
 
 
+  <h5 class="black-text text-darken-1 center">Seus Drinks:</h5>
+     <ul class="center hide-on-med-and-down">
+     <div class="collection" *ngIf="(receitas$ | async) as receitas">
+         <a *ngFor="let receita of receitas" [routerLink]="['/editar', receita.id]" class="collection-item">
+          {{ receita.nome }}</a>
 
-
-<!-- início -->
+    </div>
