--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -26,6 +26,7 @@
             <textarea id="textarea-ingred"
               name="textarea-ingred"
               class="materialize-textarea"
+              wrap="soft"
               [(ngModel)]="this.receita.ingred"
               #ingred="ngModel"
               required></textarea>
@@ -42,6 +43,7 @@
             <textarea id="textarea-preparo"
               name="textarea-preparo"
               class="materialize-textarea"
+              wrap="soft"
               [(ngModel)]="this.receita.modoprep"
               #modoprep="ngModel"
               required></textarea>
